changed img directory

--- a/1. Redshift and S3.md
+++ b/1. Redshift and S3.md
@@ -5,7 +5,7 @@ ETL 흐름
 3. 2번의 결과파일을 AWS S3에 저장
 4. S3에 저장되는 파일을 Redshift로 Copy command 사용
 
-![sql_img1](https://github.com/hyaluronicc/2104_Redshift/img/process.PNG)
+![sql_img1](https://github.com/hyaluronicc/2104_Redshift/blob/main/img/process.png)
 
 **Redshift** : 데이터웨어하우스, 대용량의 복잡한 분석, 연산, 집계 등에 사용함. OLAP. 일반적인 RDBMS보다 빠른 속도. 용이한 분석을 위해 데이터를 넣는 게 Redshift임.
 <br>
