--- a/1. Redshift and S3.md
+++ b/1. Redshift and S3.md
@@ -5,7 +5,7 @@ ETL 흐름
 3. 2번의 결과파일을 AWS S3에 저장
 4. S3에 저장되는 파일을 Redshift로 Copy command 사용
 
-![sql_img1](https://github.com/hyaluronicc/2104_Redshift/blob/main/img/process.png)
+![redshift_img1](https://github.com/hyaluronicc/2104_Redshift/blob/main/img/process.png)
 
 **Redshift** : 데이터웨어하우스, 대용량의 복잡한 분석, 연산, 집계 등에 사용함. OLAP. 일반적인 RDBMS보다 빠른 속도. 용이한 분석을 위해 데이터를 넣는 게 Redshift임.
 <br>
@@ -14,6 +14,10 @@ ETL 흐름
 **S3** : Simple Storage Service. 파일 서버의 역할을 하는 서비스. 데이터 원본을 클라우드에 저장하는 용도. 모든 형식의 파일 저장 가능. 
 * 데이터를 여러 시설에서 중복으로 저장해 데이터의 손실이 발생할 경우 자동으로 복원
 
+**Spectrum** : S3에 저장된 데이터를 Redshift에 적재하지 않고 직접 읽는 기능
+<br>
+
+![redshift_img1](https://github.com/hyaluronicc/2104_Redshift/blob/main/img/spectrum.png)
 
 
 <br>
